# gcorg-resolver

./: .gitignore  README.md  README_fr.md  TODO.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: aws-cost-report.yml  backstage-catalog-helper.yml  export_github_data.yml  integration-test.yml  python-lint-and-test.yml  s3-backup.yml  shellcheck.yml  terraform-apply-dev.yml  terraform-apply-prod.yml  terraform-plan-dev.yml  terraform-plan-prod.yml  update-reference-data.yml
.github/workflows/scripts/: aws_cost_report.py  render-readmes.yml  render_markdown.py
data/: download_reference_standard.py  gc_org_aliases.csv  get_lambda_usage.py  renormalize_aliases.py  update_aliases.py  usage_dashboard.qmd
infra/: build_lambda.sh
infra/aws/github-oidc/: main.tf  outputs.tf  variables.tf
infra/aws/lambda-api/: main.tf  outputs.tf  variables.tf
infra/env/: root.hcl
infra/env/common/: common_variables.tf  provider.tf
infra/env/dev/: domain.tf  env_vars.hcl  main.tf  outputs.tf  terraform.tfvars
infra/env/dns/: dns.tf  main.tf
infra/env/prod/: .terraform.lock.hcl  domain.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
src/gc_org_resolver/: lambda_handler.py
src/gcorg_resolver/: app.py  lambda_handler.py  load_reference_standard.py  normalize.py  resolver.py
src/gcorg_resolver/static/: example_infer.html  example_suggest.html  gcds_template.html  index_en.html  index_en.toml  index_fr.html  (+2 more)
tests/: integration_api.sh  test_app.py  test_gc_org_aliases.py  test_normalize.py  test_reference_standard.py  test_resolver.py  test_snapshot.py
(+6 files in other folders)
