[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcorg-resolver"
version = "0.0.1"
description = "HTTP API that resolves Government of Canada organization names"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "mangum>=0.21.0",
    "unidecode>=1.3",
]

[project.optional-dependencies]
lambda = [
    "mangum>=0.19",
]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gcorg_resolver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
