 [build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcorg-resolver"
version = "0.1.0"
description = "HTTP API that resolves Government of Canada organization names"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "unidecode>=1.3",
]

[project.optional-dependencies]
lambda = [
    "mangum>=0.19",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gcorg_resolver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.10",
]
